// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<Header
  docLinks={
    Object {
      "links": Object {
        "indexPatterns": Object {},
      },
    }
  }
  indexPatternName="test index pattern"
  isBeta={true}
  prompt={
    <div>
      Test prompt
    </div>
  }
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle={
      <React.Fragment>
        Create test index pattern
        <React.Fragment>
           
          <EuiBetaBadge
            label="Beta"
          />
        </React.Fragment>
      </React.Fragment>
    }
  >
    <header
      className="euiPageHeader euiPageHeader--bottomBorder euiPageHeader--responsive euiPageHeader--center"
    >
      <EuiPageHeaderContent
        pageTitle={
          <React.Fragment>
            Create test index pattern
            <React.Fragment>
               
              <EuiBetaBadge
                label="Beta"
              />
            </React.Fragment>
          </React.Fragment>
        }
        responsive={true}
      >
        <div
          className="euiPageHeaderContent"
        >
          <EuiFlexGroup
            alignItems="flexStart"
            className="euiPageHeaderContent__top"
            gutterSize="l"
            responsive={true}
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
            >
              <EuiFlexItem>
                <div
                  className="euiFlexItem"
                >
                  <EuiTitle
                    size="l"
                  >
                    <h1
                      className="euiTitle euiTitle--large"
                    >
                      Create test index pattern
                       
                      <EuiBetaBadge
                        label="Beta"
                      >
                        <span
                          className="euiBetaBadge"
                          title="Beta"
                        >
                          Beta
                        </span>
                      </EuiBetaBadge>
                    </h1>
                  </EuiTitle>
                </div>
              </EuiFlexItem>
            </div>
          </EuiFlexGroup>
          <div
            className="euiPageHeaderContent__bottom"
          >
            <EuiSpacer>
              <div
                className="euiSpacer euiSpacer--l"
              />
            </EuiSpacer>
            <EuiText>
              <div
                className="euiText euiText--medium"
              >
                <p>
                  <FormattedMessage
                    defaultMessage="An index pattern can match a single source, for example, {single}, or {multiple} data sources, {star}."
                    id="indexPatternManagement.createIndexPattern.description"
                    values={
                      Object {
                        "multiple": <strong>
                          multiple
                        </strong>,
                        "single": <EuiCode>
                          filebeat-4-3-22
                        </EuiCode>,
                        "star": <EuiCode>
                          filebeat-*
                        </EuiCode>,
                      }
                    }
                  >
                    <span>
                      An index pattern can match a single source, for example, 
                      <EuiCode>
                        <EuiCodeBlockImpl
                          inline={true}
                        >
                          <span>
                            <code>
                              filebeat-4-3-22
                            </code>
                          </span>
                        </EuiCodeBlockImpl>
                      </EuiCode>
                      , or 
                      <strong>
                        multiple
                      </strong>
                       data sources, 
                      <EuiCode>
                        <EuiCodeBlockImpl
                          inline={true}
                        >
                          <span>
                            <code>
                              filebeat-*
                            </code>
                          </span>
                        </EuiCodeBlockImpl>
                      </EuiCode>
                      .
                    </span>
                  </FormattedMessage>
                  <br />
                  <EuiLink
                    external={true}
                    target="_blank"
                  >
                    <button
                      className="euiLink euiLink--primary"
                      disabled={false}
                      type="button"
                    >
                      <FormattedMessage
                        defaultMessage="Read documentation"
                        id="indexPatternManagement.createIndexPattern.documentation"
                        values={Object {}}
                      >
                        <span>
                          Read documentation
                        </span>
                      </FormattedMessage>
                    </button>
                  </EuiLink>
                </p>
              </div>
            </EuiText>
            <EuiSpacer
              size="m"
            >
              <div
                className="euiSpacer euiSpacer--m"
              />
            </EuiSpacer>
            <div>
              Test prompt
            </div>
          </div>
        </div>
      </EuiPageHeaderContent>
    </header>
  </EuiPageHeader>
</Header>
`;

exports[`Header should render normally 1`] = `
<Header
  docLinks={
    Object {
      "links": Object {
        "indexPatterns": Object {},
      },
    }
  }
  indexPatternName="test index pattern"
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle={
      <React.Fragment>
        Create test index pattern
      </React.Fragment>
    }
  >
    <header
      className="euiPageHeader euiPageHeader--bottomBorder euiPageHeader--responsive euiPageHeader--center"
    >
      <EuiPageHeaderContent
        pageTitle={
          <React.Fragment>
            Create test index pattern
          </React.Fragment>
        }
        responsive={true}
      >
        <div
          className="euiPageHeaderContent"
        >
          <EuiFlexGroup
            alignItems="flexStart"
            className="euiPageHeaderContent__top"
            gutterSize="l"
            responsive={true}
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
            >
              <EuiFlexItem>
                <div
                  className="euiFlexItem"
                >
                  <EuiTitle
                    size="l"
                  >
                    <h1
                      className="euiTitle euiTitle--large"
                    >
                      Create test index pattern
                    </h1>
                  </EuiTitle>
                </div>
              </EuiFlexItem>
            </div>
          </EuiFlexGroup>
          <div
            className="euiPageHeaderContent__bottom"
          >
            <EuiSpacer>
              <div
                className="euiSpacer euiSpacer--l"
              />
            </EuiSpacer>
            <EuiText>
              <div
                className="euiText euiText--medium"
              >
                <p>
                  <FormattedMessage
                    defaultMessage="An index pattern can match a single source, for example, {single}, or {multiple} data sources, {star}."
                    id="indexPatternManagement.createIndexPattern.description"
                    values={
                      Object {
                        "multiple": <strong>
                          multiple
                        </strong>,
                        "single": <EuiCode>
                          filebeat-4-3-22
                        </EuiCode>,
                        "star": <EuiCode>
                          filebeat-*
                        </EuiCode>,
                      }
                    }
                  >
                    <span>
                      An index pattern can match a single source, for example, 
                      <EuiCode>
                        <EuiCodeBlockImpl
                          inline={true}
                        >
                          <span>
                            <code>
                              filebeat-4-3-22
                            </code>
                          </span>
                        </EuiCodeBlockImpl>
                      </EuiCode>
                      , or 
                      <strong>
                        multiple
                      </strong>
                       data sources, 
                      <EuiCode>
                        <EuiCodeBlockImpl
                          inline={true}
                        >
                          <span>
                            <code>
                              filebeat-*
                            </code>
                          </span>
                        </EuiCodeBlockImpl>
                      </EuiCode>
                      .
                    </span>
                  </FormattedMessage>
                  <br />
                  <EuiLink
                    external={true}
                    target="_blank"
                  >
                    <button
                      className="euiLink euiLink--primary"
                      disabled={false}
                      type="button"
                    >
                      <FormattedMessage
                        defaultMessage="Read documentation"
                        id="indexPatternManagement.createIndexPattern.documentation"
                        values={Object {}}
                      >
                        <span>
                          Read documentation
                        </span>
                      </FormattedMessage>
                    </button>
                  </EuiLink>
                </p>
              </div>
            </EuiText>
          </div>
        </div>
      </EuiPageHeaderContent>
    </header>
  </EuiPageHeader>
</Header>
`;

exports[`Header should render without including system indices 1`] = `
<Header
  docLinks={
    Object {
      "links": Object {
        "indexPatterns": Object {},
      },
    }
  }
  indexPatternName="test index pattern"
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle={
      <React.Fragment>
        Create test index pattern
      </React.Fragment>
    }
  >
    <header
      className="euiPageHeader euiPageHeader--bottomBorder euiPageHeader--responsive euiPageHeader--center"
    >
      <EuiPageHeaderContent
        pageTitle={
          <React.Fragment>
            Create test index pattern
          </React.Fragment>
        }
        responsive={true}
      >
        <div
          className="euiPageHeaderContent"
        >
          <EuiFlexGroup
            alignItems="flexStart"
            className="euiPageHeaderContent__top"
            gutterSize="l"
            responsive={true}
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
            >
              <EuiFlexItem>
                <div
                  className="euiFlexItem"
                >
                  <EuiTitle
                    size="l"
                  >
                    <h1
                      className="euiTitle euiTitle--large"
                    >
                      Create test index pattern
                    </h1>
                  </EuiTitle>
                </div>
              </EuiFlexItem>
            </div>
          </EuiFlexGroup>
          <div
            className="euiPageHeaderContent__bottom"
          >
            <EuiSpacer>
              <div
                className="euiSpacer euiSpacer--l"
              />
            </EuiSpacer>
            <EuiText>
              <div
                className="euiText euiText--medium"
              >
                <p>
                  <FormattedMessage
                    defaultMessage="An index pattern can match a single source, for example, {single}, or {multiple} data sources, {star}."
                    id="indexPatternManagement.createIndexPattern.description"
                    values={
                      Object {
                        "multiple": <strong>
                          multiple
                        </strong>,
                        "single": <EuiCode>
                          filebeat-4-3-22
                        </EuiCode>,
                        "star": <EuiCode>
                          filebeat-*
                        </EuiCode>,
                      }
                    }
                  >
                    <span>
                      An index pattern can match a single source, for example, 
                      <EuiCode>
                        <EuiCodeBlockImpl
                          inline={true}
                        >
                          <span>
                            <code>
                              filebeat-4-3-22
                            </code>
                          </span>
                        </EuiCodeBlockImpl>
                      </EuiCode>
                      , or 
                      <strong>
                        multiple
                      </strong>
                       data sources, 
                      <EuiCode>
                        <EuiCodeBlockImpl
                          inline={true}
                        >
                          <span>
                            <code>
                              filebeat-*
                            </code>
                          </span>
                        </EuiCodeBlockImpl>
                      </EuiCode>
                      .
                    </span>
                  </FormattedMessage>
                  <br />
                  <EuiLink
                    external={true}
                    target="_blank"
                  >
                    <button
                      className="euiLink euiLink--primary"
                      disabled={false}
                      type="button"
                    >
                      <FormattedMessage
                        defaultMessage="Read documentation"
                        id="indexPatternManagement.createIndexPattern.documentation"
                        values={Object {}}
                      >
                        <span>
                          Read documentation
                        </span>
                      </FormattedMessage>
                    </button>
                  </EuiLink>
                </p>
              </div>
            </EuiText>
          </div>
        </div>
      </EuiPageHeaderContent>
    </header>
  </EuiPageHeader>
</Header>
`;
